GUI for HappyEyeballs

--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -53,6 +53,15 @@
                     <span class="desc">$T('explain-max_art_opt')</span>
                 </div>
                 <div class="field-pair alt">
+                    <label class="config" for="randomize_server_ip">$T('opt-randomize_server_ip')</label>
+                      <select name="randomize_server_ip" id="randomize_server_ip">
+                          <option value="0" <!--#if $randomize_server_ip == 0 then 'selected="selected" class="selected"' else ""#--> >$T('off')</option>
+                          <option value="1" <!--#if $randomize_server_ip == 1 then 'selected="selected" class="selected"' else ""#--> >$T('on')</option>
+                          <option value="2" <!--#if $randomize_server_ip == 2 then 'selected="selected" class="selected"' else ""#--> >$T('happy eyeballs')</option>
+                      </select>
+                    <span class="desc">$T('explain-randomize_server_ip')</span>
+                </div>
+                <div class="field-pair">
                     <label class="config" for="auto_disconnect">$T('opt-auto_disconnect')</label>
                     <input type="checkbox" name="auto_disconnect" id="auto_disconnect" value="1" <!--#if int($auto_disconnect) > 0 then 'checked="checked"' else ""#--> />
                     <span class="desc">$T('explain-auto_disconnect')</span>
