Updating KnockoutJS to latest version
Performance improvements for Firefox and Chrome.

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -673,7 +673,7 @@
             <!--#include raw $webdir + "/static/javascripts/jquery-ui.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery.peity.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/jquery.dateFormat.min.js"#-->
-            <!--#include raw $webdir + "/static/javascripts/knockout-3.3.0.js"#-->
+            <!--#include raw $webdir + "/static/javascripts/knockout-latest.js"#-->
             <!--#include raw $webdir + "/static/javascripts/knockout-extensions.js"#-->
             <!--#include raw $webdir + "/static/bootstrap/js/bootstrap.min.js"#-->
             <!--#include raw $webdir + "/static/javascripts/glitter.js"#-->
