Adding animations to Glitter
A little more fun!

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -73,7 +73,7 @@
                         </div>
                     </fieldset>
                     <!-- ko if: !hasStatusInfo() -->
-                    <strong>$T('Glitter-loading')...</strong>
+                    <h4>$T('Glitter-loading')<span class="dotOne">.</span><span class="dotTwo">.</span><span class="dotThree">.</span></h4>
                     <!-- /ko -->
 
                     <!-- ko if: hasStatusInfo -->
