Adding host:port text to SMTP in Config

--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -38,7 +38,7 @@
                 <div class="field-pair alt">
                     <label class="config" for="email_server">$T('opt-email_server')</label>
                     <input type="text" name="email_server" id="email_server" value="$email_server" size="40" />
-                    <span class="desc">$T('explain-email_server')</span>
+                    <span class="desc">$T('explain-email_server') ($T('host').lower():$T('srv-port').lower())</span>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="email_to">$T('opt-email_to')</label>
