Cleaning skin texts

--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -8,7 +8,7 @@
         #if $pane == "Folders" then $T('cmenu-folders') else ""#
         #if $pane == "Switches" then $T('cmenu-switches') else ""#
         #if $pane == "Servers" then $T('cmenu-servers') else ""#
-        #if $pane == "Scheduling" then $T('Plush-cmenu-scheduling') else ""#
+        #if $pane == "Scheduling" then $T('cmenu-scheduling') else ""#
         #if $pane == "Email" then $T('cmenu-notif') else ""#
         #if $pane == "Categories" then $T('cmenu-cat') else ""#
         #if $pane == "Sorting" then $T('cmenu-sorting') else ""#
@@ -252,7 +252,7 @@
                 <li>
                     <a href="${root}config/scheduling/" #if $pane == "Scheduling" then 'class="active"' else ""#>
                         <span class="glyphicon glyphicon-time"></span>
-                        <strong>$T('Plush-cmenu-scheduling')</strong>
+                        <strong>$T('cmenu-scheduling')</strong>
                     </a>
                 </li>
                 <li>
