--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -160,7 +160,7 @@
     </div><!-- /section -->
     <div class="section">
         <div class="col2">
-            <h3>$T('genericSort')</h3>
+            <h3>$T('movieSort')</h3>
             <p>
                 <b>$T('affectedCat')</b><br/>
                 <select name="movie_cat" multiple="multiple" class="multiple_cats">
