--- a/interfaces/Plush/templates/_inc_header.tmpl
+++ b/interfaces/Plush/templates/_inc_header.tmpl
@@ -120,37 +120,7 @@
   <div id="config_container" class="config_margin_status lang-$active_lang">
     <div id="config_content">
 #else#
-  #if $pane=="Status"#
-  #else if $pane=="RSS"#
-  #else#
-  <div class="config_nav">
-    <ul>
-      <li><a class="#if $pane=="General"#nav_active#end if#" id="config_nav_general" href="${path}config/general/">
-        <div class="config_sprite_container sprite_config_nav_general">$T('cmenu-general')</div></a></li>
-      <li><a class="#if $pane=="Folders"#nav_active#end if#" id="config_nav_directories" href="${path}config/folders/">
-        <div class="config_sprite_container sprite_config_nav_folders">$T('cmenu-folders')</div></a></li>
-      <li><a class="#if $pane=="Switches"#nav_active#end if#" id="config_nav_switches" href="${path}config/switches/">
-        <div class="config_sprite_container sprite_config_nav_switches">$T('cmenu-switches')</div></a></li>
-      <li><a class="#if $pane=="Servers"#nav_active#end if#" id="config_nav_server" href="${path}config/server/">
-        <div class="config_sprite_container sprite_config_nav_servers">$T('cmenu-servers')</div></a></li>
-      <li><a class="#if $pane=="Scheduling"#nav_active#end if#" id="config_nav_scheduling" href="${path}config/scheduling/">
-        <div class="config_sprite_container sprite_config_nav_scheduling">$T('Plush-cmenu-scheduling')</div></a></li>
-      <li><a class="#if $pane=="Email"#nav_active#end if#" id="config_nav_email" href="${path}config/notify/">
-        <div class="config_sprite_container sprite_config_nav_email">$T('cmenu-notif')</div></a></li>
-      <!--#if 0#-->
-      <li><a class="#if $pane=="Index Sites"#nav_active#end if#" id="config_nav_index_sites" href="${path}config/indexers/">
-        <div class="config_sprite_container sprite_config_nav_indexsites">$T('cmenu-newzbin')</div></a></li>
-      <!--#end if#-->
-      <li><a class="#if $pane=="Categories"#nav_active#end if#" id="config_nav_categories" href="${path}config/categories/">
-        <div class="config_sprite_container sprite_config_nav_categories">$T('cmenu-cat')</div></a></li>
-      <li><a class="#if $pane=="Sorting"#nav_active#end if#" id="config_nav_sorting" href="${path}config/sorting/">
-        <div class="config_sprite_container sprite_config_nav_sorting">$T('cmenu-sorting')</div></a></li>
-      <li><a class="#if $pane=="Special"#nav_active#end if#" id="config_nav_special" href="${path}config/special/">
-        <div class="config_sprite_container sprite_config_nav_special">$T('cmenu-special')</div></a></li>
-    </ul>
-  </div>
-  #end if#
-  <div id="config_container" class="config_margin#if $pane=="Categories"# config_margin_wide#end if#">
+  <div id="config_container" class="config_margin">
     <div id="config_content">
       <div id="config">
         <div id="config-content" class="clearfix">
